--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,11 @@
   text-align: center;
 }
 
+.App {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+  background-color: rgb(203, 184, 184);
+}
+
